# ludex

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pages.yml  release.yml
agent/: ludex-mac.spec  pyproject.toml
agent/ludex/: __init__.py  cli.py  commands.py  config.py  daemon.py  definitions.py  detection.py  gui.py  identity.py  installer.py  limits.py  models.py  state.py  transport.py
agent/ludex/platform/: __init__.py  base.py  darwin.py  linux.py  windows.py
agent/packaging/: build.ps1  build.sh  ludex_entry.py
agent/tests/: integration_backend.py
backend/: Alerts.gs  Charts.gs  Code.gs  Command.html  Dashboard.gs  Forms.gs  Limits.html  Maintenance.gs  Menu.gs  SETUP.md  Settings.html  Setup.html  StandardActivities.gs  UsageChart.html  appsscript.json
docs/: activity-definitions.md  architecture.md  for-parents.md  protocol.md
site/: guide.html  index.html  install.html  style.css
