[project]
name = "ludex-agent"
version = "0.1.3"
description = "Ludex endpoint agent — detects defined activities and logs time to a Google Sheet backend."
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "psutil>=5.9",
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.scripts]
ludex = "ludex.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ludex*"]
